--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "frontend",
-  "homepage": "https://unmilan1999.github.io/binstitute",
+  "homepage": "https://unmilan1999.github.io/bhaktivedanta",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
